position label aligned left

--- a/gallery.html
+++ b/gallery.html
@@ -385,6 +385,7 @@
             data-nanogallery2 = '{
                   "thumbnailHeight":  "450",
                   "thumbnailWidth":   "auto",
+                  "thumbnailLabel": {"align": "left"},
                   "itemsBaseURL":     "https://www.ccad.edu/sites/default/files/"
                 }' >
 
