--- a/gallery.html
+++ b/gallery.html
@@ -386,6 +386,8 @@
                   "thumbnailHeight":  "450",
                   "thumbnailWidth":   "auto",
                   "thumbnailLabel": {"align": "left"},
+                  "thumbnailBorderHorizontal": "0",
+                  "thumbnailBorderVertical": "0",
                   "itemsBaseURL":     "https://www.ccad.edu/sites/default/files/"
                 }' >
 
